# any-typing-game

./: Cargo.toml  config.yml  config1.yml  epistory.yml  gameboy.yml  gameboy_japanese.yml
src/: backend.rs  configuration.rs  display.rs  event.rs  gui.rs  main.rs  typing.rs  typing_tui.rs  ui_trait.rs  xdo.rs
