[package]
name = "typing-to-input"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
serde = {version="1.0", features=["derive"]}
serde_yaml = "0.8"
xdotool = "0.0.2"
orbtk = {git="https://github.com/redox-os/orbtk.git", branch="develop"}
 